tests/miniJava/neg/006551_mutation.MiniJava
class java { public static void Main ( String [ ] String java ) { { } } }
